--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "name": "node-ts-clean",
   "version": "1.0.0",
-  "author": "Martinchx",
-  "license": "MIT",
+  "author": "Martin Cruz",
+  "description": "A clean API template following Domain-Driven Design for scalable backend services",
+  "engines": {
+    "node": "22.x"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/martinncruzz/node-ts-clean"
+  },
   "scripts": {
     "dev": "tsnd --respawn --clear src/app.ts",
     "build": "rimraf ./dist && tsc",
