--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,22 @@
-version: '3.8'
-
 services:
+  postgres-db:
+    image: postgres:17
+    container_name: postgres-db
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+    volumes:
+      - ./postgres:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
 
-  # mongo-db:
-  #   image: mongo:6.0.6
-  #   environment:
-  #     MONGO_INITDB_ROOT_USERNAME: mongo-user
-  #     MONGO_INITDB_ROOT_PASSWORD: mongo-password
-  #   volumes:
-  #     - ./mongo:/data/db
-  #   ports:
-  #     - 27017:27017
-
-  # postgres-db:
-  #   image: postgres:15.3
-  #   environment:
-  #     POSTGRES_USER: postgres-user
-  #     POSTGRES_PASSWORD: postgres-password
-  #     POSTGRES_DB: my-db
-  #   volumes:
-  #     - ./postgres:/var/lib/postgresql/data
-  #   ports:
-  #     - 5432:5432
+  mongo-db:
+    image: mongo:7
+    container_name: mongo-db
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: admin
+    volumes:
+      - ./mongo:/data/db
+    ports:
+      - 27017:27017
